--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -9,5 +9,11 @@ html(lang="en")
         header
             h1 Noom
         main
-            h3 Welcome to Noom!
+            form#nick
+                input(type="text", placeholder="Choose a nickname", required)
+                button Save
+            ul
+            form#message
+                input(type="text", placeholder="Write a msg", required)
+                button Send
         script(src="/public/js/app.js")
